# auto-asr

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml
auto_asr/: audio_tools.py  config.py  funasr_asr.py  funasr_models.py  model_hub.py  openai_asr.py  pipeline.py  qwen3_asr.py  silence_split.py  subtitle_io.py  vad_split.py
auto_asr/subtitle_processing/: __init__.py  alignment.py  base.py  pipeline.py  prompts.py  settings.py
auto_asr/subtitle_processing/processors/: __init__.py  optimize.py  split.py  translate.py
auto_asr/subtitle_processing/prompts/optimize/: subtitle.md
auto_asr/subtitle_processing/prompts/split/: semantic.md  sentence.md
auto_asr/subtitle_processing/prompts/translate/: reflect.md  single.md  standard.md
docs/plans/: 2026-01-30-subtitle-processing-videocaptioner-parity.md
tests/: test_app_qwen3_integration.py  test_config_update.py  test_dependencies.py  test_funasr_asr.py  test_llm_utils.py  test_pipeline_qwen3_backend.py  test_qwen3_asr.py  test_qwen3_install_hint.py  test_subtitle_io.py  test_subtitle_processing_aligner.py  test_subtitle_processing_pipeline.py  test_subtitle_processing_registry.py  test_subtitle_processing_settings.py  test_subtitle_processors_auth_errors.py  test_subtitle_processors_split.py  test_subtitle_processors_translate_optimize.py  test_subtitle_prompts.py  test_subtitle_provider_settings.py
