[project]
name = "auto-asr"
version = "0.1.0"
description = "Gradio UI for OpenAI ASR -> SRT/VTT/TXT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "typer",
    "openai",
    "json-repair",
    "numpy<2.2",
    "soundfile",
    "imageio-ffmpeg",
    "silero_vad",
]

[project.optional-dependencies]
funasr = [
    "funasr",
    "modelscope",
    # Some FunASR models rely on HuggingFace tokenizers (AutoTokenizer).
    "transformers",
    "sentencepiece",
    # SenseVoice/FunASR-Nano tokenizers may require `tiktoken`.
    "tiktoken",
]
transformers = [
    # Transformers backend runtime for local ASR models (e.g. Qwen3-ASR).
    "transformers",
    "sentencepiece",
    # Used by our model downloader (ModelScope preferred, HF fallback).
    "modelscope",
    "huggingface_hub",
    # Qwen3-ASR wrapper library (Transformers backend + forced aligner).
    "qwen-asr",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["Qwen3-ASR-Toolkit", "GPT-SoVITS", "miku"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
